alignment fix, but not really fixed

--- a/swissvoice/swissvoice/static/css/stylesheet.css
+++ b/swissvoice/swissvoice/static/css/stylesheet.css
@@ -17,12 +17,12 @@ body {
   border: 5px dotted blue;
 }
 
-
-.grid2 li {
-  border: 5px dotted cyan;
-  border-radius: 5px;
-}
 */
+.grid2 li {
+  justify-self: center;
+  border:2px solid rgba(0,0,0,0)
+}
+
 .gridFullColumn {
   grid-column: 1 / -1;
 }
@@ -86,4 +86,6 @@ nav ul li a:hover {
 
 footer {
   background-color: rgba(0, 0, 0, 0.2);
+  padding-top: 20px;
+
 }
